tests/core/snapshots/test-upstream-headers.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "id": 11
        },
        {
          "id": 3
        }
      ]
    }
  }
}
