tests/core/snapshots/undeclared-type-no-base-url.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Undeclared type 'User' was found",
    "trace": [
      "Query",
      "users"
    ],
    "description": null
  },
  {
    "message": "No base URL defined",
    "trace": [
      "Query",
      "users",
      "@http"
    ],
    "description": null
  }
]
