tests/core/snapshots/undeclared-type.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Undeclared type 'User' was found",
    "trace": [
      "tests/execution/undeclared-type.md 6#3"
    ],
    "description": null
  }
]
